fixed desktop layout (768px-1160px) removing scrollbar

--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -173,3 +173,8 @@ img {
         font-size: 1.3rem;
     }
 }
+@media screen and (max-width: 1160px){
+    .container{
+        max-width: 100%;
+    }
+}
